--- a/src/app/layout/main/components/sidebar/sidebar.component.html
+++ b/src/app/layout/main/components/sidebar/sidebar.component.html
@@ -1,12 +1,13 @@
 <!-- Sidebar -->
 <ul
-    class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
+    class="navbar-nav bg-primary sidebar sidebar-dark accordion"
     id="accordionSidebar"
+    [class.sidebar-mobile-show]="sidebarStatus$ | async"
 >
     <!-- Sidebar - Brand -->
     <a
         class="sidebar-brand d-flex align-items-center justify-content-center"
-        href="index.html"
+        [routerLink]="'/'"
     >
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
@@ -17,59 +18,57 @@
     <!-- Divider -->
     <hr class="sidebar-divider my-0" />
 
-    <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
-        <a class="nav-link" href="index.html">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span></a
-        >
-    </li>
-
-    <!-- Divider -->
-    <hr class="sidebar-divider" />
-
-    <!-- Heading -->
-    <div class="sidebar-heading">Interface</div>
-
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
-        <a
-            class="nav-link collapsed"
-            href="#"
-            data-toggle="collapse"
-            data-target="#collapseTwo"
-            aria-expanded="true"
-            aria-controls="collapseTwo"
-        >
-            <i class="fas fa-fw fa-cog"></i>
-            <span>Components</span>
-        </a>
-        <div
-            id="collapseTwo"
-            class="collapse"
-            aria-labelledby="headingTwo"
-            data-parent="#accordionSidebar"
-        >
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">Custom Components:</h6>
-                <a class="collapse-item" href="buttons.html">Buttons</a>
-                <a class="collapse-item" href="cards.html">Cards</a>
-            </div>
-        </div>
-    </li>
-
-    <!-- Divider -->
-    <hr class="sidebar-divider" />
-
-    <!-- Nav Item - Tables -->
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Tables</span></a
-        >
-    </li>
-
-    <!-- Divider -->
-    <hr class="sidebar-divider d-none d-md-block" />
+    <ng-container
+        [ngTemplateOutlet]="listMenuTemp"
+        [ngTemplateOutletContext]="{ item: menu$ | async, level: 0 }"
+    ></ng-container>
 </ul>
 <!-- End of Sidebar -->
+
+<ng-template #listMenuTemp let-item="item" let-level="level">
+    <ng-container
+        *ngFor="let m of item"
+        [ngTemplateOutlet]="menuTemp"
+        [ngTemplateOutletContext]="{ item: m, level: level }"
+    ></ng-container>
+</ng-template>
+
+<ng-template #menuTemp let-item="item" let-level="level">
+    <ng-container>
+        <!-- Heading -->
+        <div *ngIf="item.title" class="sidebar-heading mt-2">
+            {{ item.title }}
+        </div>
+
+        <!-- Nav Item - Pages Collapse Menu -->
+        <li #li class="nav-item">
+            <a
+                type="button"
+                class="nav-link collapsed"
+                [routerLink]="item.link"
+                [routerLinkActive]="'active'"
+                [attr.data-toggle]="item.children ? 'collapse' : ''"
+                (click)="routeLink(item.link, li)"
+            >
+                <i [class]="item.icon"></i>
+                <span>{{ item.label }}</span>
+            </a>
+            <ng-container *ngIf="item.children">
+                <div
+                    #collapse="ngbCollapse"
+                    [ngbCollapse]="true"
+                    class="collapse-inner rounded collapse show bg-primary my-0"
+                    [ngStyle]="{ margin: (level + 1) * 20 + 'px' }"
+                >
+                    <ng-container
+                        [ngTemplateOutlet]="listMenuTemp"
+                        [ngTemplateOutletContext]="{
+                            item: item.children,
+                            level: level + 1
+                        }"
+                    ></ng-container>
+                </div>
+            </ng-container>
+        </li>
+    </ng-container>
+</ng-template>
