--- a/src/app/layout/main/components/sidebar/sidebar.component.html
+++ b/src/app/layout/main/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <!-- Sidebar -->
 <ul
-    class="navbar-nav bg-primary sidebar sidebar-dark accordion"
+    class="navbar-nav bg-primary sidebar sidebar-dark accordion h-100"
     id="accordionSidebar"
     [class.sidebar-mobile-show]="sidebarStatus$ | async"
 >
