--- a/src/app/layout/main/main.layout.html
+++ b/src/app/layout/main/main.layout.html
@@ -3,9 +3,9 @@
         <main-sidebar></main-sidebar>
     </div>
     <div class="flex-grow-1">
-        <div class="d-flex flex-column">
+        <div class="d-flex flex-column h-100">
             <main-header></main-header>
-            <div class="p-3">
+            <div class="flex-grow-1 p-3">
                 <router-outlet></router-outlet>
             </div>
         </div>
