--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,21 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+/* Core Grid CSS */
+@import 'ag-grid-community/styles/ag-grid.css';
+/* Quartz Theme Specific CSS */
+@import 'ag-grid-community/styles/ag-theme-quartz.css';
+@import "~@ng-select/ng-select/themes/default.theme.css";
+
+.form-control {
+    &:focus {
+        border-color: #007eff;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 0 3px rgba(0,126,255,0.1);
+    }
+}
+
+.required:after {
+    content: ' *';
+    @extend .text-danger;
+}
