--- a/src/app/layout/main/components/header/header.component.html
+++ b/src/app/layout/main/components/header/header.component.html
@@ -8,6 +8,8 @@
         <i class="fa fa-bars"></i>
     </button>
 
+    <span class="h4 ps-3 d-none d-md-block">{{ title$ | async }}</span>
+
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto">
         <!-- Nav Item - Alerts -->
