--- a/src/app/layout/main/main.layout.html
+++ b/src/app/layout/main/main.layout.html
@@ -5,6 +5,7 @@
     <div class="flex-grow-1">
         <div class="d-flex flex-column h-100">
             <main-header></main-header>
+            <span class="h4 ps-3 d-block d-md-none">{{ title$ | async }}</span>
             <div class="flex-grow-1 p-3">
                 <router-outlet></router-outlet>
             </div>
