--- a/src/app/module/football-club/form-search/form-search.component.html
+++ b/src/app/module/football-club/form-search/form-search.component.html
@@ -2,10 +2,10 @@
     <div class="row row-gap-3">
         <div class="col-md-3">
             <label class="fw-semibold">Tên FC</label>
-            <input 
+            <input
                 class="form-control"
                 formControlName="name"
-                placeholder="nhập tên fc" 
+                placeholder="nhập tên fc"
             />
         </div>
         <div class="col-md-3">
@@ -29,15 +29,14 @@
         </div>
         <div class="col-md-3">
             <label class="fw-semibold">Đến ngày</label>
-            <input
-                type="date"
-                class="form-control"
-                formControlName="toDate"
-            />
+            <input type="date" class="form-control" formControlName="toDate" />
         </div>
     </div>
 
     <div class="d-flex justify-content-start justify-content-md-center">
-        <button class="btn btn-primary">Tìm kiếm</button>
+        <button class="btn btn-primary">
+            <i class="fas fa-search me-2"></i>
+            <span>Tìm kiếm</span>
+        </button>
     </div>
 </form>
