--- a/src/app/pages/football-club/football-club.page.html
+++ b/src/app/pages/football-club/football-club.page.html
@@ -11,10 +11,10 @@
             <div class="d-flex justify-content-between align-items-center">
                 <span class="font-italic fw-semibold">Tổng số bản ghi: 1</span>
                 <div class="d-flex gap-2">
-                    <button class="btn btn-sm btn-success">
+                    <a [routerLink]="'/create-football-club'" class="btn btn-sm btn-success">
                         <i class="fas fa-plus me-2"></i>
                         <span>Thêm mới</span>
-                    </button>
+                    </a>
 
                     <button class="btn btn-sm btn-secondary">
                         <i class="fas fa-download me-2"></i>
