--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -5,8 +5,6 @@
     <register-form></register-form>
     <hr />
     <div class="text-center">
-        <a class="small" [routerLink]="'/auth/login'">
-            Already have an account? Login!
-        </a>
+        <a class="small" [routerLink]="'/auth/login'"> Already have an account? Login! </a>
     </div>
 </div>
