--- a/src/app/layout/auth/auth.layout.html
+++ b/src/app/layout/auth/auth.layout.html
@@ -7,9 +7,7 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div
-                                class="col-lg-6 d-none d-lg-block bg-login-image"
-                            ></div>
+                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
                             <div class="col-lg-6">
                                 <router-outlet></router-outlet>
                             </div>
