--- a/src/app/layout/main/components/sidebar/sidebar.component.html
+++ b/src/app/layout/main/components/sidebar/sidebar.component.html
@@ -5,10 +5,7 @@
     [class.sidebar-mobile-show]="sidebarStatus$ | async"
 >
     <!-- Sidebar - Brand -->
-    <a
-        class="sidebar-brand d-flex align-items-center justify-content-center"
-        [routerLink]="'/'"
-    >
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" [routerLink]="'/'">
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
