--- a/src/app/module/football-club/form-search/form-search.component.html
+++ b/src/app/module/football-club/form-search/form-search.component.html
@@ -2,11 +2,7 @@
     <div class="row row-gap-3">
         <div class="col-md-3">
             <label class="fw-semibold">Tên FC</label>
-            <input
-                class="form-control"
-                formControlName="name"
-                placeholder="nhập tên fc"
-            />
+            <input class="form-control" formControlName="name" placeholder="nhập tên fc" />
         </div>
         <div class="col-md-3">
             <label class="fw-semibold">Trạng thái</label>
@@ -21,11 +17,7 @@
 
         <div class="col-md-3">
             <label class="fw-semibold">Từ ngày</label>
-            <input
-                type="date"
-                class="form-control"
-                formControlName="fromDate"
-            />
+            <input type="date" class="form-control" formControlName="fromDate" />
         </div>
         <div class="col-md-3">
             <label class="fw-semibold">Đến ngày</label>
