--- a/src/app/pages/football-club/football-club.page.html
+++ b/src/app/pages/football-club/football-club.page.html
@@ -5,9 +5,7 @@
         </div>
     </div>
     <div class="p-3 bg-light rounded h-100">
-        <div
-            class="d-flex flex-column row-gap-4 h-100 bg-white p-3 rounded shadow"
-        >
+        <div class="d-flex flex-column row-gap-4 h-100 bg-white p-3 rounded shadow">
             <div class="d-flex justify-content-between align-items-center">
                 <span class="font-italic fw-semibold">Tổng số bản ghi: 1</span>
                 <div class="d-flex gap-2">
