--- a/src/app/pages/forgot-password/forgot-password.page.html
+++ b/src/app/pages/forgot-password/forgot-password.page.html
@@ -2,8 +2,8 @@
     <div class="text-center">
         <h1 class="h4 text-gray-900 mb-2">Forgot Your Password?</h1>
         <p class="mb-4">
-            We get it, stuff happens. Just enter your email address below and
-            we'll send you a link to reset your password!
+            We get it, stuff happens. Just enter your email address below and we'll send you a link to reset your
+            password!
         </p>
     </div>
     <forgot-password-form></forgot-password-form>
@@ -12,8 +12,6 @@
         <a class="small" [routerLink]="'/auth/login'">Create an Account!</a>
     </div>
     <div class="text-center">
-        <a class="small" [routerLink]="'/auth/register'">
-            Already have an account? Login!
-        </a>
+        <a class="small" [routerLink]="'/auth/register'"> Already have an account? Login! </a>
     </div>
 </div>
