--- a/src/app/pages/football-club/create-football-club/create-football-club.page.html
+++ b/src/app/pages/football-club/create-football-club/create-football-club.page.html
@@ -38,7 +38,7 @@
     <div class="d-flex flex-column gap-2">
         <div class="d-flex justify-content-between align-items-center">
             <h4>Danh sách thành viên</h4>
-            <button class="btn btn-success">
+            <button class="btn btn-success" (click)="openAddMemberModal()">
                 <i class="fas fa-plus me-2"></i>
                 <span>Thêm thành viên</span>
             </button>
