dev member management page

--- a/src/app/module/member/create-member-modal/create-member-modal.component.html
+++ b/src/app/module/member/create-member-modal/create-member-modal.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column">
     <div class="modal-header d-flex justify-content-between">
         <span class="h4">Thêm mới thành viên</span>
-        <span aria-hidden="true" (click)="closeModal()">&times;</span>
+        <i class="fas fa-times" (click)="closeModal()"></i>
     </div>
 
     <div class="modal-body">
