--- a/src/app/module/football-club/create-form/create-form.component.html
+++ b/src/app/module/football-club/create-form/create-form.component.html
@@ -10,7 +10,7 @@
         </div>
     </div>
 
-    <div class="row row-gap-2">
+    <div class="row row-gap-2 flex-column-reverse flex-md-row">
         <div class="col-md-6">
             <label class="fw-semibold">Mô tả</label>
             <textarea
