--- a/src/app/module/common/pagination/pagination.component.html
+++ b/src/app/module/common/pagination/pagination.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-between align-items-center">
     <div class="col-md-6 d-none d-md-flex gap-2 align-items-center">
-        <span class="fw-semibold">Số bản ghi trên trang: </span>
+        <span class="fw-semibold text-capitalize">{{ 'COMMON.RECORD_PER_PAGE' | translate }}: </span>
         <ng-select
             [items]="pageList"
             [(ngModel)]="pagination.pageSize"
