--- a/src/app/module/donate/form-search/form-search.component.html
+++ b/src/app/module/donate/form-search/form-search.component.html
@@ -1,14 +1,14 @@
 <form [formGroup]="formGroup" class="d-flex flex-column row-gap-3">
     <div class="row row-gap-3">
         <div class="col-md-6">
-            <label class="fw-semibold">Tên người donate</label>
+            <label class="fw-semibold text-capitalize">{{ 'DONATE.NAME_DONATOR' | translate }}</label>
             <input
-                placeholder="Nhập tên người done"
+                [placeholder]="'DONATE.INPUT_NAME_DONATOR' | translate"
                 class="form-control"
             />
         </div>
         <div class="col-md-6">
-            <label class="fw-semibold">Trạng thái</label>
+            <label class="fw-semibold">{{ 'COMMON.STATUS' | translate }}</label>
             <ng-select
             ></ng-select>
         </div>
@@ -16,13 +16,13 @@
 
     <div class="row row-gap-3">
         <div class="col-md-6">
-            <label class="fw-semibold">Đội bóng</label>
+            <label class="fw-semibold">{{ 'COMMON.FC' | translate }}</label>
             <ng-select
             ></ng-select>
         </div>
 
         <div class="col-md-6">
-            <label class="fw-semibold">Ngày donate</label>
+            <label class="fw-semibold">{{ 'DONATE.DATE_DONATE' | translate }}</label>
             <div class="row row-gap-3">
                 <div class="col-md-6">
                     <input
@@ -44,7 +44,7 @@
        <div class="d-flex justify-content-start justify-content-md-center">
             <button class="btn btn-primary">
                 <i class="fas fa-search"></i>
-                <span>Tìm kiếm</span>
+                <span>{{ 'COMMON.SEARCH' | translate }}</span>
             </button>
        </div>
     </div>
