--- a/src/app/pages/donate/donate.page.html
+++ b/src/app/pages/donate/donate.page.html
@@ -8,15 +8,15 @@
     <div class="bg-light p-3 rounded h-100">
         <div class="bg-white p-3 rounded h-100 d-flex flex-column row-gap-2">
             <div class="d-flex justify-content-between align-items-center">
-                <i class="fw-semibold">Tổng số bản ghi: 1</i>
+                <i class="fw-semibold text-capitalize">{{ 'COMMON.TOTAL_RECORD' | translate:{numberOfRecord: 1} }}</i>
                 <div class="d-flex gap-2">
                     <button class="btn btn-sm btn-success" (click)="openAddDonate()">
                         <i class="fas fa-plus me-2"></i>
-                        <span>Thêm mới</span>
+                        <span class="text-capitalize">{{ 'COMMON.CREATE' | translate }}</span>
                     </button>
                     <button class="btn btn-sm btn-secondary">
                         <i class="fas fa-download me-2"></i>
-                        <span>Xuất Excel</span>
+                        <span class="text-capitalize">{{ 'COMMON.EXPORT_EXCEL' | translate }}</span>
                     </button>
                 </div>
             </div>
