--- a/src/app/layout/main/components/header/header.component.html
+++ b/src/app/layout/main/components/header/header.component.html
@@ -4,14 +4,14 @@
         <i class="fa fa-bars"></i>
     </button>
 
-    <span class="h4 ps-3 d-none d-md-block">{{ title$ | async }}</span>
+    <span class="h4 ps-3 d-none d-md-block text-capitalize">{{ title$ | async | translate }}</span>
 
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto d-flex align-items-center">
         <!-- Nav Item - Alerts -->
         <li class="nav-item dropdown no-arrow mx-1">
             <ng-select
-                style="min-width: 120px"
+                style="min-width: 150px"
                 [items]="languages"
                 [searchable]="false"
                 [clearable]="false"
@@ -21,11 +21,13 @@
                 (change)="onChangeLanguage($event)"
             >
                 <ng-template ng-label-tmp let-item="item">
-                    {{ item.label | translate }}
+                    <img class="me-2" width="30px" height="30px" [src]="item.iconUrl" [alt]="item.label | translate" />
+                    <span>{{ item.label | translate }}</span>
                 </ng-template>
 
                 <ng-template ng-option-tmp let-item="item">
-                    {{ item.label | translate }}
+                    <img class="me-2" width="30px" height="30px" [src]="item.iconUrl" [alt]="item.label | translate" />
+                    <span>{{ item.label | translate }}</span>
                 </ng-template>
             </ng-select>
         </li>
