--- a/src/app/layout/main/components/sidebar/sidebar.component.html
+++ b/src/app/layout/main/components/sidebar/sidebar.component.html
@@ -48,7 +48,7 @@
                 (click)="routeLink(item.link, li)"
             >
                 <i [class]="item.icon"></i>
-                <span>{{ item.label }}</span>
+                <span class="text-capitalize">{{ item.label | translate }}</span>
             </a>
             <ng-container *ngIf="item.children">
                 <div
