--- a/src/app/module/donate/form-search/form-search.component.html
+++ b/src/app/module/donate/form-search/form-search.component.html
@@ -2,50 +2,39 @@
     <div class="row row-gap-3">
         <div class="col-md-6">
             <label class="fw-semibold text-capitalize">{{ 'DONATE.NAME_DONATOR' | translate }}</label>
-            <input
-                [placeholder]="'DONATE.INPUT_NAME_DONATOR' | translate"
-                class="form-control"
-            />
+            <input [placeholder]="'DONATE.INPUT_NAME_DONATOR' | translate" class="form-control" />
         </div>
         <div class="col-md-6">
             <label class="fw-semibold">{{ 'COMMON.STATUS' | translate }}</label>
-            <ng-select
-            ></ng-select>
+            <ng-select></ng-select>
         </div>
     </div>
 
     <div class="row row-gap-3">
         <div class="col-md-6">
             <label class="fw-semibold">{{ 'COMMON.FC' | translate }}</label>
-            <ng-select
-            ></ng-select>
+            <ng-select></ng-select>
         </div>
 
         <div class="col-md-6">
             <label class="fw-semibold">{{ 'DONATE.DATE_DONATE' | translate }}</label>
             <div class="row row-gap-3">
                 <div class="col-md-6">
-                    <input
-                        type="date"
-                        class="form-control"
-                    />
+                    <input type="date" class="form-control" />
                 </div>
                 <div class="col-md-6">
-                    <input
-                        type="date"
-                        class="form-control"
-                    />
+                    <input type="date" class="form-control" />
                 </div>
             </div>
         </div>
     </div>
 
     <div class="row">
-       <div class="d-flex justify-content-start justify-content-md-center">
+        <div class="d-flex justify-content-start justify-content-md-center">
             <button class="btn btn-primary">
-                <i class="fas fa-search"></i>
-                <span>{{ 'COMMON.SEARCH' | translate }}</span>
+                <i class="fas fa-search me-2"></i>
+                <span class="text-capitalize">{{ 'COMMON.SEARCH' | translate }}</span>
             </button>
-       </div>
+        </div>
     </div>
 </form>
