--- a/src/app/module/member/create-member-modal/create-member-modal.component.html
+++ b/src/app/module/member/create-member-modal/create-member-modal.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column">
     <div class="modal-header d-flex justify-content-between">
-        <span class="h4">Thêm mới thành viên</span>
+        <span class="h4 text-capitalize">{{ 'MEMBER.CREATE_TITLE' | translate }}</span>
         <i class="fas fa-times" (click)="closeModal()"></i>
     </div>
 
@@ -9,7 +9,9 @@
     </div>
 
     <div class="modal-footer d-flex justify-content-center gap-2">
-        <button class="btn btn-primary">Lưu lại</button>
-        <button class="btn btn-secondary" (click)="closeModal()">Hủy bỏ</button>
+        <button class="btn btn-primary text-capitalize">{{ 'COMMON.SAVE' | translate }}</button>
+        <button class="btn btn-secondary text-capitalize" (click)="closeModal()">
+            {{ 'COMMON.CANCEL' | translate }}
+        </button>
     </div>
 </div>
