--- a/src/app/pages/member/member.page.html
+++ b/src/app/pages/member/member.page.html
@@ -7,16 +7,16 @@
     <div class="bg-light p-3 rounded h-100">
         <div class="bg-white p-3 rounded shadow d-flex flex-column row-gap-2 h-100">
             <div class="d-flex justify-content-between align-items-center">
-                <i class="fw-semibold">Tổng số bản ghi: 1</i>
+                <i class="fw-semibold text-capitalize">{{ 'COMMON.TOTAL_RECORD' | translate:{ numberOfRecord: 1 } }}</i>
                 <div class="d-flex gap-2">
-                    <button class="btn btn-sm btn-success">
+                    <button class="btn btn-sm btn-success" (click)="openAddMemberModal()">
                         <i class="fas fa-plus me-2"></i>
-                        <span>Thêm mới</span>
+                        <span class="text-capitalize">{{ 'COMMON.CREATE' | translate }}</span>
                     </button>
 
                     <button class="btn btn-sm btn-secondary">
                         <i class="fas fa-download me-2"></i>
-                        <span>Xuất Excel</span>
+                        <span class="text-capitalize">{{ 'COMMON.EXPORT_EXCEL' | translate }}</span>
                     </button>
                 </div>
             </div>
