--- a/src/app/pages/football-club/create-football-club/create-football-club.page.html
+++ b/src/app/pages/football-club/create-football-club/create-football-club.page.html
@@ -37,10 +37,10 @@
     </div>
     <div class="d-flex flex-column gap-2">
         <div class="d-flex justify-content-between align-items-center">
-            <h4>Danh sách thành viên</h4>
+            <h4 class="text-capitalize">{{ 'MEMBER.LIST_OF_MEMBER' | translate }}</h4>
             <button class="btn btn-success" (click)="openAddMemberModal()">
                 <i class="fas fa-plus me-2"></i>
-                <span>Thêm thành viên</span>
+                <span class="text-capitalize">{{ 'MEMBER.CREATE_MEMBER' | translate }}</span>
             </button>
         </div>
         <div style="height: 300px">
