--- a/src/app/layout/auth/auth.layout.html
+++ b/src/app/layout/auth/auth.layout.html
@@ -9,7 +9,14 @@
                         <div class="row">
                             <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
                             <div class="col-lg-6">
-                                <router-outlet></router-outlet>
+                                <div class="w-100 d-flex justify-content-end p-2">
+                                    <div style="min-width: 150px">
+                                        <select-language></select-language>
+                                    </div>
+                                </div>
+                                <div class="p-3">
+                                    <router-outlet></router-outlet>
+                                </div>
                             </div>
                         </div>
                     </div>
