--- a/src/app/module/auth/forgot-password-form/forgot-password-form.component.html
+++ b/src/app/module/auth/forgot-password-form/forgot-password-form.component.html
@@ -3,9 +3,11 @@
         <input
             type="email"
             class="form-control form-control-user"
-            placeholder="Enter Email Address..."
+            [placeholder]="'AUTH.INPUT_EMAIL' | translate"
             formControlName="email"
         />
     </div>
-    <button class="btn btn-primary btn-user w-100">Reset Password</button>
+    <button class="btn btn-primary btn-user w-100 text-capitalize">
+        {{ 'FORGOT_PASSWORD.RESET_PASSWORD' | translate }}
+    </button>
 </form>
