--- a/src/app/pages/forgot-password/forgot-password.page.html
+++ b/src/app/pages/forgot-password/forgot-password.page.html
@@ -1,17 +1,14 @@
 <div class="p-5">
     <div class="text-center">
-        <h1 class="h4 text-gray-900 mb-2">Forgot Your Password?</h1>
-        <p class="mb-4">
-            We get it, stuff happens. Just enter your email address below and we'll send you a link to reset your
-            password!
-        </p>
+        <h1 class="h4 text-gray-900 mb-2 text-capitalize">{{ 'FORGOT_PASSWORD.TITLE' | translate }}?</h1>
+        <p class="mb-4 text-capitalize">{{ 'FORGOT_PASSWORD.SUB_TITLE' | translate }}</p>
     </div>
     <forgot-password-form></forgot-password-form>
     <hr />
     <div class="text-center">
-        <a class="small" [routerLink]="'/auth/login'">Create an Account!</a>
+        <a class="small text-capitalize" [routerLink]="'/auth/login'">{{ 'AUTH.CREATE_AN_ACC' | translate }}!</a>
     </div>
     <div class="text-center">
-        <a class="small" [routerLink]="'/auth/register'"> Already have an account? Login! </a>
+        <a class="small text-capitalize" [routerLink]="'/auth/register'">{{ 'AUTH.ALREADY_ACC' | translate }}!</a>
     </div>
 </div>
