--- a/src/app/pages/match-result/match-result.page.html
+++ b/src/app/pages/match-result/match-result.page.html
@@ -10,10 +10,10 @@
             <div class="d-flex justify-content-between align-items-center">
                 <i class="fw-semibold text-capitalize">{{ 'COMMON.TOTAL_RECORD' | translate:{numberOfRecord: 1} }}</i>
                 <div class="d-flex gap-2">
-                    <button class="btn btn-sm btn-success">
+                    <a [routerLink]="'/match-result/create'" class="btn btn-sm btn-success">
                         <i class="fas fa-plus me-2"></i>
                         <span class="text-capitalize">{{ 'COMMON.CREATE' | translate }}</span>
-                    </button>
+                    </a>
                     <button class="btn btn-sm btn-secondary">
                         <i class="fas fa-download me-2"></i>
                         <span class="text-capitalize">{{ 'COMMON.EXPORT_EXCEL' | translate }}</span>
