--- a/src/app/pages/funding/funding.page.html
+++ b/src/app/pages/funding/funding.page.html
@@ -10,7 +10,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <i class="fw-semibold text-capitalize">{{ 'COMMON.TOTAL_RECORD' | translate:{numberOfRecord: 1} }}</i>
                 <div class="d-flex gap-2">
-                    <button class="btn btn-sm btn-success">
+                    <button class="btn btn-sm btn-success" (click)="openAddFunding()">
                         <i class="fas fa-plus me-2"></i>
                         <span class="text-capitalize">{{ 'COMMON.CREATE' | translate }}</span>
                     </button>
@@ -26,4 +26,4 @@
             <pagination [pagination]="pagination"></pagination>
         </div>
     </div>
-<
+</div>
