--- a/src/app/module/funding/form-search/form-search.component.html
+++ b/src/app/module/funding/form-search/form-search.component.html
@@ -36,7 +36,7 @@
     <div class="row">
         <div class="d-flex justify-content-start justify-content-md-center">
             <button class="btn btn-primary">
-                <i class="fas fa-search"></i>
+                <i class="fas fa-search me-2"></i>
                 <span class="text-capitalize">{{ 'COMMON.SEARCH' | translate }}</span>
             </button>
         </div>
