--- a/src/app/pages/donate/donate.page.html
+++ b/src/app/pages/donate/donate.page.html
@@ -1,12 +1,12 @@
 <div class="d-flex flex-column row-gap-3 h-100">
     <div class="bg-light p-3 rounded">
-        <div class="bg-white p-3 rounded">
+        <div class="bg-white p-3 rounded shadow">
             <donate-form-search></donate-form-search>
         </div>
     </div>
 
     <div class="bg-light p-3 rounded h-100">
-        <div class="bg-white p-3 rounded h-100 d-flex flex-column row-gap-2">
+        <div class="bg-white p-3 rounded h-100 d-flex flex-column row-gap-2 shadow">
             <div class="d-flex justify-content-between align-items-center">
                 <i class="fw-semibold text-capitalize">{{ 'COMMON.TOTAL_RECORD' | translate:{numberOfRecord: 1} }}</i>
                 <div class="d-flex gap-2">
