handle update and delete member

--- a/src/app/module/common/components/grid-core/grid-core.component.html
+++ b/src/app/module/common/components/grid-core/grid-core.component.html
@@ -1,6 +1,7 @@
 <ag-grid-angular
     class="ag-theme-quartz w-100 h-100"
     style="min-height: 300px"
+    [gridOptions]="gridOptions"
     [columnDefs]="columnDefs"
     [rowData]="rowData"
     (gridReady)="onGridReady($event)"
