--- a/src/app/module/member/components/create-member-form/create-member-form.component.html
+++ b/src/app/module/member/components/create-member-form/create-member-form.component.html
@@ -57,7 +57,7 @@
             ></fms-input>
         </div>
         <div class="col-md-6">
-            <label class="fw-semibold text-capitalize">{{
+            <label class="fw-semibold required text-capitalize">{{
                 'COMMON.POSITION' | translate
             }}</label>
             <ng-select
