--- a/src/app/pages/football-club/create-football-club/create-football-club.page.html
+++ b/src/app/pages/football-club/create-football-club/create-football-club.page.html
@@ -16,7 +16,11 @@
             </button>
         </div>
         <div style="height: 300px">
-            <member-grid [rowData]="members"></member-grid>
+            <member-grid
+                [rowData]="members"
+                (updateMember)="onUpdateMember($event)"
+                (deleteMember)="onDeleteMember($event)"
+            ></member-grid>
         </div>
     </div>
     <div class="d-flex justify-content-center">
