--- a/src/app/module/member/components/create-member-modal/create-member-modal.component.html
+++ b/src/app/module/member/components/create-member-modal/create-member-modal.component.html
@@ -1,25 +1,29 @@
 <div class="d-flex flex-column">
     <div class="modal-header d-flex justify-content-between">
         <span class="h4 text-capitalize">{{
-            'MEMBER.CREATE_TITLE' | translate
+            (member ? 'MEMBER.UPDATE_TITLE' : 'MEMBER.CREATE_TITLE') | translate
         }}</span>
-        <i class="fas fa-times" (click)="closeModal()"></i>
+        <i class="fas fa-times" (click)="onCloseModal()"></i>
     </div>
 
     <div class="modal-body">
         <create-member-form
+            [member]="member"
             (formInitialized)="formGroup = $event"
             (changeAvatar)="avatar = $event"
         ></create-member-form>
     </div>
 
     <div class="modal-footer d-flex justify-content-center gap-2">
-        <button class="btn btn-primary text-capitalize" (click)="saveMember()">
+        <button
+            class="btn btn-primary text-capitalize"
+            (click)="onSaveMember()"
+        >
             {{ 'COMMON.SAVE' | translate }}
         </button>
         <button
             class="btn btn-secondary text-capitalize"
-            (click)="closeModal()"
+            (click)="onCloseModal()"
         >
             {{ 'COMMON.CANCEL' | translate }}
         </button>
