--- a/src/app/pages/football-club/create-football-club/create-football-club.page.html
+++ b/src/app/pages/football-club/create-football-club/create-football-club.page.html
@@ -27,5 +27,6 @@
         <button class="btn btn-success" (click)="submitFormCreateFc()">
             {{ 'FOOTBALL_CLUB.CREATE.BTN_CREATE' | translate }}
         </button>
+        <button-back></button-back>
     </div>
 </div>
