--- a/src/app/module/common/components/fms-input/fms-input.component.html
+++ b/src/app/module/common/components/fms-input/fms-input.component.html
@@ -1,5 +1,10 @@
 <div>
-    <label *ngIf="label" class="fw-semibold text-capitalize" [class.required]="required">{{ label }}</label>
+    <label
+        *ngIf="label"
+        class="fw-semibold text-capitalize"
+        [class.required]="required"
+        >{{ label }}</label
+    >
     <ng-container [ngSwitch]="variant">
         <input
             *ngSwitchCase="'input'"
@@ -26,7 +31,10 @@
 </div>
 <div *ngIf="control.touched && control.invalid">
     <div *ngFor="let err of control.errors | keyvalue">
-        <div *ngIf="err.value && errorsMessage[err.key]" class="text-danger fw-semibold text-capitalize">
+        <div
+            *ngIf="err.value && errorsMessage[err.key]"
+            class="text-danger fw-semibold text-capitalize"
+        >
             {{ errorsMessage[err.key] | translate }}
         </div>
     </div>
