--- a/src/app/module/member/components/create-member-form/create-member-form.component.html
+++ b/src/app/module/member/components/create-member-form/create-member-form.component.html
@@ -19,11 +19,12 @@
         <div class="col-md-6">
             <fms-input
                 [label]="'MEMBER.PRINTED_NAME' | translate"
-                [required]="false"
+                [required]="true"
                 [variant]="'input'"
                 [placeholder]="'MEMBER.INPUT_PRINTED_NAME' | translate"
                 formControlName="nameShirt"
                 [errorsMessage]="{
+                    required: 'MEMBER.ERRORS.PRINTED_NAME.REQUIRED',
                     maxLength: 'MEMBER.ERRORS.PRINTED_NAME.MAX_LENGTH'
                 }"
             ></fms-input>
@@ -31,11 +32,14 @@
         <div class="col-md-6">
             <fms-input
                 [label]="'MEMBER.PRINTED_NUMBER' | translate"
-                [required]="false"
+                [required]="true"
                 [type]="'number'"
                 [variant]="'input'"
                 [placeholder]="'MEMBER.INPUT_PRINTED_NUMBER' | translate"
                 formControlName="numberShirt"
+                [errorsMessage]="{
+                    required: 'MEMBER.ERRORS.PRINTED_NUMBER.REQUIRED'
+                }"
             ></fms-input>
         </div>
     </div>
@@ -57,18 +61,19 @@
             ></fms-input>
         </div>
         <div class="col-md-6">
-            <label class="fw-semibold required text-capitalize">{{
-                'COMMON.POSITION' | translate
-            }}</label>
-            <ng-select
+            <fms-select
+                [label]="'COMMON.POSITION' | translate"
+                [required]="true"
                 [items]="positions"
-                bindLabel="name"
-                bindValue="code"
-                [placeholder]="'COMMON.SELECT_POSITION' | translate"
+                [bindValue]="'code'"
+                [bindLabel]="'name'"
                 [multiple]="true"
-                [closeOnSelect]="false"
+                [placeholder]="'COMMON.SELECT_POSITION' | translate"
                 formControlName="position"
-            ></ng-select>
+                [errorsMessage]="{
+                    required: 'MEMBER.ERRORS.POSITION.REQUIRED'
+                }"
+            ></fms-select>
         </div>
     </div>
 
